objects/LLC_BI__Requirement_Context__c.object
<CustomObject>
    <description>This junction object links a Requirement object to another context object.</description>
    <fields>
        <fullName>LLC_BI__Business_Process_Key__c</fullName>
        <description>The system automatically populates this text field with a unique key that identifies the business process used for a specific domain or feature.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field uses a unique key that identifies a business process for a specific domain or feature.</inlineHelpText>
        <label>Business Process Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Covenant_Compliance2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this lookup field to reference a Covenant Compliance context object.</description>
        <inlineHelpText>This field references the Covenant Compliance record related to the Requirement Context object.</inlineHelpText>
        <label>Covenant Compliance</label>
        <referenceTo>LLC_BI__Covenant_Compliance2__c</referenceTo>
        <relationshipLabel>Requirement Contexts</relationshipLabel>
        <relationshipName>Requirement_Contexts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system automatically populates this checkbox to indicate whether the junction object is deleted or not. By default, it is false.</description>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this optional lookup field to reference a Loan context object.</description>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Requirement Contexts</relationshipLabel>
        <relationshipName>Requirement_Contexts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this optional lookup field to reference a Product Package context object.</description>
        <label>Product Package</label>
        <referenceTo>LLC_BI__Product_Package__c</referenceTo>
        <relationshipLabel>Requirement Contexts</relationshipLabel>
        <relationshipName>Requirement_Contexts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this optional lookup field to reference a Relationship (Account) context object.</description>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Requirement Contexts</relationshipLabel>
        <relationshipName>Requirement_Contexts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Requirement__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>The system automatically populates this optional lookup field to reference a Requirement object.</description>
        <label>Requirement</label>
        <referenceTo>LLC_BI__Requirement__c</referenceTo>
        <relationshipLabel>Requirement Contexts</relationshipLabel>
        <relationshipName>Requirement_Contexts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Requirement Context</label>
    <nameField>
        <displayFormat>RC-{0000000000}</displayFormat>
        <label>Requirement Context Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requirement Contexts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>